--- a/posts/newblogpost/index.qmd
+++ b/posts/newblogpost/index.qmd
@@ -1,1 +1,14 @@
-This is Tyler's new blog post!!!
+---
+title: "Tyler's First Blog Post"
+listing:
+  contents: posts
+  sort: "date desc"
+  type: default
+  categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
+title-block-banner: true
+---
+
+My first post!
