--- a/posts/ResumeForGit/Resume.qmd
+++ b/posts/ResumeForGit/Resume.qmd
@@ -64,6 +64,16 @@ Planned, anticipated completion July 2026
 \item Highlighted significant upsets and patterns that were not apparent without detailed analysis
 \end{itemize}
 
+## Skills
+
+\underline{\textbf{Computer}}
+
+Proficient in R, SAS, Microsoft Excel, Outlook, Word, and PowerPoint 
+
+\underline{\textbf{Language}}
+
+Basic written and conversational Spanish
+
 ## Activities
 
 \underline{\textbf{Actuarial Science Club}}
@@ -72,12 +82,6 @@ Planned, anticipated completion July 2026
 \item Engage with actuarial professionals to gain insights into industry practices and career paths
 \item Build professional connections with aspiring actuaries through group events and collaborative activities
 \end{itemize}
-
-## Awards
-
-Regents Scholarship, August 2023–Present
-
-Nebraska Career Scholarship, August 2023–Present
 
 
 
